<resources>
    <string name="app_name">SPcore</string>

    <!-- Login screen strings -->
    <string name="login_description">Sign in with your SPice account</string>
    <string name="prompt_id">Admin No.</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_admin_no">Not a valid admin number</string>
    <string name="error_incorrect_password">Wrong admin number/password</string>
    <string name="error_field_required">This field is required</string>

    <!-- Initial Login screen strings -->
    <string name="username_hint">Username (required)</string>
    <string name="username_description">
        By sharing your username with friends, you can let them see your timetable
        and schedule meetups with you
    </string>

    <string name="displayed_name_hint">Displayed Name (optional)</string>
    <string name="displayed_name_description">
        Providing your actual name makes it easier for people to know who you are
    </string>


    <!-- Home screen action bar strings -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_ats">ATS</string>

    <!-- Event screen action bar strings -->
    <string name="action_event_details_delete">Delete</string>



    <!-- Side nav strings -->
    <string name="nav_day_str">Day</string>
    <string name="nav_5_day_str">5-Days</string>
    <string name="nav_friends_str">Friends</string>
    <string name="nav_logout_str">Logout</string>
    <string name="nav_settings_str">Settings</string>

    <!-- SharedPreferences IDs -->

    <!-- for cookie storage (only used for ATS submission's temporary session cookies) -->
    <string name="cookie_storage_shared_preference_id">com.SPcore.k0-keys</string>

    <string name="jwt_token_shared_preference_id">com.SPcore.n3k07</string>
    <string name="ats_shared_preference_id">com.SPcore.574</string>


    <!--
    ============================================
                Accessbility (TTS)
    ============================================
    -->

    <!-- Nav bar -->
    <string name="nav_tts_open">Open navigation drawer</string>
    <string name="nav_tts_close">Close navigation drawer</string>
    <string name="nav_header_profile_picture_description">Profile picture</string>
    <string name="title_activity_lesson_details">LessonDetailsActivity</string>
    <string name="title_activity_friend_schedule">FriendScheduleActivity</string>


</resources>
